AR_RU_03 : Hero : used a variable for border, fixed image alignment

--- a/src/styles/abstracts/variables/_colors.scss
+++ b/src/styles/abstracts/variables/_colors.scss
@@ -10,3 +10,4 @@ $shadow-color-2: #00000017;
 $shadow-color-3: #0000000d;
 $shadow-color-4: #00000003;
 $shadow-color-5: #00000000;
+$grey-border: 1px solid #eeeeee;
